syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.dsproject.accountservices";
option java_outer_classname = "AccountServicesImpl";

package accountservices;

service accountServices{

	rpc login(LoginRequest) returns (LoginResponse){}
	rpc logout(Empty) returns (LogoutResponse) {}

}
	
	message LoginRequest{
		string username = 1;
		string password = 2;
	}

	message LoginResponse{
		string responseMessage = 1;
		int32 responseCode = 2;
	}

	message Empty{}
	

	message LogoutResponse{
		string responseMessage = 1;
	}


